noncompliant_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: noncompliant-pod
spec:
  containers:
  - image: nginx:1.7.9
    name: noncompliant-pod
    ports:
    - containerPort: 80
