simple_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: noncompliant-pod
spec:
  containers:
  - image: busybox
    name: noncompliant-pod
