_manifest_.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: simple
  namespace: default
  labels:
    name: simple
spec:
  ports:
  - name: webhook
    port: 443
    targetPort: 8080
  selector:
    name: simple 
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: simple
  namespace: default
  labels:
    name: simple
spec:
  replicas: 1
  template:
    metadata:
      name: simple 
      labels:
        name: simple
    spec:
      containers:
        - name: webhook
          image: chrisdyer/simplewebhook:v0.0.1
          imagePullPolicy: Always
          resources:
            limits:
              memory: 50Mi
              cpu: 300m
            requests:
              memory: 00Mi
              cpu: 300m
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/certs
              readOnly: true
            - name: logs
              mountPath: /tmp
          securityContext:
            readOnlyRootFilesystem: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: simple
        - name: logs
          emptyDir: {}
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: simple
webhooks:
  - name: chrisdyer.simplewebhook.com
    clientConfig:
      service:
        name: simple
        namespace: default
        path: "/validate"
      caBundle: "${CA_BUNDLE}"
    rules:
      - operations: ["CREATE","UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    failurePolicy: Ignore
