manifest.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: {SERVICE}
  namespace: {NAMESPACE}
  labels:
    name: {SERVICE}
spec:
  ports:
  - name: webhook
    port: 443
    targetPort: 8080
  selector:
    name: {SERVICE} 
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: {SERVICE}
  namespace: {NAMESPACE}
  labels:
    name: {SERVICE}
spec:
  replicas: 1
  template:
    metadata:
      name: {SERVICE} 
      labels:
        name: {SERVICE}
    spec:
      containers:
        - name: webhook
          image: chrisdyer/simplewebhook:v0.0.1
          imagePullPolicy: Always
          resources:
            limits:
              memory: 50Mi
              cpu: 300m
            requests:
              memory: 00Mi
              cpu: 300m
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/certs
              readOnly: true
            - name: logs
              mountPath: /tmp
          securityContext:
            readOnlyRootFilesystem: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: {SERVICE}
        - name: logs
          emptyDir: {}
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: {SERVICE}
webhooks:
  - name: {SERVICE}.simplewebhook.com
    clientConfig:
      service:
        name: {SERVICE}
        namespace: default
        path: "/validate"
      caBundle: "{CA_BUNDLE}"
    rules:
      - operations: ["CREATE","UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    failurePolicy: Ignore
